Prevent a permanent scrollbar and remove useless js code

--- a/css/popups.css
+++ b/css/popups.css
@@ -31,7 +31,7 @@
   /*-moz-border-radius: 15px;*/
   /*-webkit-border-radius: 15px;*/
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
